crates/skopli-capi/include/skopli.h

typedef enum AgStatus AgStatus;
typedef int32_t AgStatus;
/**
 * The opaque pricing handle. Holds an immutable core [`Pricing`] instance
 * (injected catalogs + mode); constructed by [`ag_pricing_new`], freed by
 * [`ag_pricing_free`].
 */
typedef struct AgPricing AgPricing;
/**
 * A library-owned byte buffer handed out to the caller. `ptr` points at `len`
 * bytes of UTF-8 JSON (no trailing NUL); free it with [`ag_buf_free`]. A
 * zero/`len == 0` buffer has `ptr == null` and needs no free.
 */
typedef struct {
  /**
   * Pointer to the first byte, or null when `len == 0`.
   */
  uint8_t *ptr;
  /**
   * Length in bytes.
   */
  uintptr_t len;
} AgBuf;
/**
 * Roll up an event array by a dimension. `events_json` is a `UsageEvent[]`;
 * `opts_json` is `{by, tz?, blockMs?}`. Writes a `Rollup[]` JSON buffer to
 * `*out`.
 *
 * # Safety
 * Both JSON args describe readable buffers or (null, 0); `out` is writable.
 */
AgStatus ag_rollup(const char *events_json,
                   uintptr_t events_len,
                   const char *opts_json,
                   uintptr_t opts_len,
                   AgBuf *out);
/**
 * Compute the USD cost of a token bundle under a flat/tiered price.
 * `tokens_json` is a `TokenCounts`; `price_json` is a `ModelPrice`. Writes the
 * result to `*out` (an `f64`).
 *
 * # Safety
 * Both JSON args are non-null readable buffers; `out` is a writable `*mut f64`.
 */
AgStatus ag_cost_usd(const char *tokens_json,
                     uintptr_t tokens_len,
                     const char *price_json,
                     uintptr_t price_len,
                     double *out);
/**
 * Write the default on-disk cache directory (platform-specific) as a
 * library-owned C string to `*out`; free it with [`ag_string_free`].
 *
 * # Safety
 * `out` is a valid writable `*mut *mut c_char`.
 */
AgStatus ag_default_cache_dir(char **out);
/**
 * Construct an `AgPricing` handle from injected catalogs/overrides in
 * `opts_json` (`{mode?, overrides?, catalogs?, ...}`; null = empty). Writes the
 * handle to `*out`; free it with [`ag_pricing_free`].
 *
 * The default `libskopli` performs no network I/O: it opens no socket and
 * fetches no catalog. Callers pass pre-fetched `catalogs` (a source name plus
 * either a prices map or a raw `format`+`payload`) and price against those.
 * Built-in source fetching requires the optional `net` cargo feature (the
 * separate `libskopli-full` build). When `opts_json` asks for built-in sources
 * (`builtinSources:true`) and the library was compiled without `net`, this
 * returns [`AgStatus::Catalog`] with the `NoBuiltinSources` error message
 * recorded via [`ag_last_error_message`].
 *
 * # Safety
 * `opts_json`/`opts_len` describe a readable buffer or (null, 0); `out` is a
 * valid writable `*mut *mut AgPricing`.
 */
AgStatus ag_pricing_new(const char *opts_json, uintptr_t opts_len, AgPricing **out);
/**
 * Free an `AgPricing` handle. Passing null is a safe no-op.
 *
 * # Safety
 * `pricing` must be a handle from [`ag_pricing_new`] not yet freed, or null.
 */
void ag_pricing_free(AgPricing *pricing);
/**
 * Price an event batch grouped by the option dimension. `events_json` is a
 * `UsageEvent[]`; `opts_json` is `{by, tz?, blockMs?}`. Writes a
 * `PricedEventGroup[]` JSON buffer to `*out`.
 *
 * # Safety
 * `pricing` is a live handle; the JSON args describe readable buffers or
 * (null, 0); `out` is writable.
 */
AgStatus ag_pricing_price_events(const AgPricing *pricing,
                                 const char *events_json,
                                 uintptr_t events_len,
                                 const char *opts_json,
                                 uintptr_t opts_len,
                                 AgBuf *out);
/**
 * Look up a single model's price. `model`/`model_len` describe a bare UTF-8
 * model-name buffer (NOT JSON); a null or empty buffer is an invalid argument.
 * Writes a single `PriceLookup` JSON object (a `{priced:true, ...}` hit or a
 * `{priced:false, ...}` miss) to `*out`.
 *
 * # Safety
 * `pricing` is a live handle; `model`/`model_len` describe a readable buffer;
 * `out` is writable.
 */
AgStatus ag_pricing_lookup_model(const AgPricing *pricing,
                                 const char *model,
                                 uintptr_t model_len,
                                 AgBuf *out);