sdks/java/src/main/java/com/skopli/ffi/Skopli.java


    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_rollup(const char *events_json, uintptr_t events_len, const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static FunctionDescriptor ag_rollup$descriptor() {
        return ag_rollup.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_rollup(const char *events_json, uintptr_t events_len, const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static MethodHandle ag_rollup$handle() {
        return ag_rollup.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_rollup(const char *events_json, uintptr_t events_len, const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static MemorySegment ag_rollup$address() {
        return ag_rollup.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_rollup(const char *events_json, uintptr_t events_len, const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static int ag_rollup(MemorySegment events_json, long events_len, MemorySegment opts_json, long opts_len, MemorySegment out) {
        var mh$ = ag_rollup.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_rollup", events_json, events_len, opts_json, opts_len, out);
            }
            return (int)mh$.invokeExact(events_json, events_len, opts_json, opts_len, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_cost_usd {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_cost_usd");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_cost_usd(const char *tokens_json, uintptr_t tokens_len, const char *price_json, uintptr_t price_len, double *out)
     * }
     */
    public static FunctionDescriptor ag_cost_usd$descriptor() {
        return ag_cost_usd.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_cost_usd(const char *tokens_json, uintptr_t tokens_len, const char *price_json, uintptr_t price_len, double *out)
     * }
     */
    public static MethodHandle ag_cost_usd$handle() {
        return ag_cost_usd.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_cost_usd(const char *tokens_json, uintptr_t tokens_len, const char *price_json, uintptr_t price_len, double *out)
     * }
     */
    public static MemorySegment ag_cost_usd$address() {
        return ag_cost_usd.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_cost_usd(const char *tokens_json, uintptr_t tokens_len, const char *price_json, uintptr_t price_len, double *out)
     * }
     */
    public static int ag_cost_usd(MemorySegment tokens_json, long tokens_len, MemorySegment price_json, long price_len, MemorySegment out) {
        var mh$ = ag_cost_usd.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_cost_usd", tokens_json, tokens_len, price_json, price_len, out);
            }
            return (int)mh$.invokeExact(tokens_json, tokens_len, price_json, price_len, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_default_cache_dir {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_default_cache_dir");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_default_cache_dir(char **out)
     * }
     */
    public static FunctionDescriptor ag_default_cache_dir$descriptor() {
        return ag_default_cache_dir.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_default_cache_dir(char **out)
     * }
     */
    public static MethodHandle ag_default_cache_dir$handle() {
        return ag_default_cache_dir.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_default_cache_dir(char **out)
     * }
     */
    public static MemorySegment ag_default_cache_dir$address() {
        return ag_default_cache_dir.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_default_cache_dir(char **out)
     * }
     */
    public static int ag_default_cache_dir(MemorySegment out) {
        var mh$ = ag_default_cache_dir.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_default_cache_dir", out);
            }
            return (int)mh$.invokeExact(out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_pricing_new {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_pricing_new");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_new(const char *opts_json, uintptr_t opts_len, AgPricing **out)
     * }
     */
    public static FunctionDescriptor ag_pricing_new$descriptor() {
        return ag_pricing_new.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_new(const char *opts_json, uintptr_t opts_len, AgPricing **out)
     * }
     */
    public static MethodHandle ag_pricing_new$handle() {
        return ag_pricing_new.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_new(const char *opts_json, uintptr_t opts_len, AgPricing **out)
     * }
     */
    public static MemorySegment ag_pricing_new$address() {
        return ag_pricing_new.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_pricing_new(const char *opts_json, uintptr_t opts_len, AgPricing **out)
     * }
     */
    public static int ag_pricing_new(MemorySegment opts_json, long opts_len, MemorySegment out) {
        var mh$ = ag_pricing_new.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_pricing_new", opts_json, opts_len, out);
            }
            return (int)mh$.invokeExact(opts_json, opts_len, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_pricing_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_pricing_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void ag_pricing_free(AgPricing *pricing)
     * }
     */
    public static FunctionDescriptor ag_pricing_free$descriptor() {
        return ag_pricing_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void ag_pricing_free(AgPricing *pricing)
     * }
     */
    public static MethodHandle ag_pricing_free$handle() {
        return ag_pricing_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void ag_pricing_free(AgPricing *pricing)
     * }
     */
    public static MemorySegment ag_pricing_free$address() {
        return ag_pricing_free.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void ag_pricing_free(AgPricing *pricing)
     * }
     */
    public static void ag_pricing_free(MemorySegment pricing) {
        var mh$ = ag_pricing_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_pricing_free", pricing);
            }
            mh$.invokeExact(pricing);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_pricing_price_events {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_pricing_price_events");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_price_events(const AgPricing *pricing, const char *events_json, uintptr_t events_len, const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static FunctionDescriptor ag_pricing_price_events$descriptor() {
        return ag_pricing_price_events.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_price_events(const AgPricing *pricing, const char *events_json, uintptr_t events_len, const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static MethodHandle ag_pricing_price_events$handle() {
        return ag_pricing_price_events.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * AgStatus ag_pricing_price_events(const AgPricing *pricing, const char *events_json, uintptr_t events_len, const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static MemorySegment ag_pricing_price_events$address() {
        return ag_pricing_price_events.ADDR;
    }

    /**
     * {@snippet lang=c :
     * AgStatus ag_pricing_price_events(const AgPricing *pricing, const char *events_json, uintptr_t events_len, const char *opts_json, uintptr_t opts_len, AgBuf *out)
     * }
     */
    public static int ag_pricing_price_events(MemorySegment pricing, MemorySegment events_json, long events_len, MemorySegment opts_json, long opts_len, MemorySegment out) {
        var mh$ = ag_pricing_price_events.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("ag_pricing_price_events", pricing, events_json, events_len, opts_json, opts_len, out);
            }
            return (int)mh$.invokeExact(pricing, events_json, events_len, opts_json, opts_len, out);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class ag_pricing_lookup_model {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Skopli.C_INT,
            Skopli.C_POINTER,
            Skopli.C_POINTER,
            Skopli.C_LONG_LONG,
            Skopli.C_POINTER
        );

        public static final MemorySegment ADDR = Skopli.findOrThrow("ag_pricing_lookup_model");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }
